Sat Aug  7 09:47:06 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: fix checking version of GCC.

Mon Aug  2 21:51:16 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (ruby_init_loadpath_safe): rb_str_set_len modifies ptr
	  since r26303.

Mon Aug  2 21:16:03 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: NONAMELESSUNION defined only if gcc
	  version is older than 3.4.4. [ruby-core:31567] [Bug #3637]
	* ext/win32ole/extconf.rb: ditto.

Fri Jul 30 07:48:04 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb: use TK_XINCLUDES on tkConfig.sh when not empty,
	  even if MacOS X Aqua version [ruby-dev:41883].

Thu Aug  5 18:36:11 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* complex.c (nucomp_marshal_load): should check the argument.
	  [ruby-core:31622]

	* rational.c (nurat_marshal_load): ditto

Mon Aug  2 16:34:32 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* thread_win32.c (native_thread_join): need to wait thread, of course.
	  [ruby-dev:41911]

Mon Aug  2 12:22:22 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c (file_expand_path): wrong condition. [ruby-core:31591]

Thu Jul 29 02:38:09 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: not [freebsd] but [freebsd*] for AS_CASE.

Mon Jul 26 13:52:25 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: define BROKEN_CLOSE only on FreeBSD.
	  This needs to merge to 1.9.2.

Mon Jul 26 11:51:01 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: define BROKEN_CLOSE on FreeBSD.
	  This fixes build failure on MSVC. [ruby-core:31481]

	* include/ruby/ruby.h, include/ruby/missing.h:
	  use BROKEN_CLOSE for replacing close(2).

Mon Aug  2 00:03:18 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* util.c (ruby_add_suffix): fixed a bug returning uninitialized value.
	  This is the essential part from r28794 of trunk.

Mon Jul 26 13:01:25 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
